# Qmol-3

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CPANEL_DEPLOY.md  Dockerfile  LAUNCH.md  README.md  admin.py  api.py  build_release.py  cli.py  config.py  cpanel.htaccess  demo.py  docker-compose.yml  passenger_wsgi.py  pyproject.toml  qmol_client.py  render.yaml  requirements.txt  run_worker.bat  setup.ps1  smoke_test.py  start.bat  stripe_checkout.py  stripe_webhook.py  worker.py
android/: gradlew  gradlew.bat  settings.gradle
docs/: API.md  COMPLIANCE.md  GO_LIVE.md  OUTREACH.md
landing/: admin.html  android.html  checkout.html  dashboard.html  docs.html  index.html  investor.html  onepager.html  openapi.json  pharma.html  portal.html  privacy.html  qmol-postman.json  stats.html  terms.html
logs/: api.jsonl
marketing/: README.md  lead_list.md  onepager_staging_checklist.md  telemarketing_plan.md
microsite/: README.md  index.html  privacy.html  terms.html
mobile/: README.md  pubspec.yaml
packaging/qmol-client/: README.md  pyproject.toml
qmol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
release/: LICENSE.txt  LICENSE_COMMERCIAL.txt  STATS.md  qmol_full.csv  qmol_full.jsonl  qmol_full.sdf
scripts/: build_client.py  dump_openapi.py
src/: alerts.py  audit.py  cache.py  charges.py  clustering.py  compute.py  conformers.py  convert.py  coupons.py  dedup.py  descriptors.py  diversity.py  exporters.py  exports.py  fingerprints.py  formula.py  gumroad_publish.py  ingest.py  invoices.py  jobs.py  kaggle_publish.py  keys.py  magic_link.py  mcs.py  metrics.py  parquet_out.py  plans.py  predict.py  prom.py  publish.py  ratelimit.py  reactions.py  referrals.py  retro.py  rotate.py  scaffolds.py  scopes.py  screen.py  sdf_out.py  shape3d.py  (+12 more)
tests/: test_account.py  test_alerts.py  test_api_cli.py  test_audit_rotate_invoices.py  test_billing.py  test_cache_diversity_sdf.py  test_charges.py  test_cli_extras.py  test_clustering.py  (+23 more)
(+24 files in other folders)
