[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qmol-client"
version = "0.1.0"
description = "Python client + CLI for the Q-Mol molecular descriptor API (qmol.ai)."
readme = "README.md"
authors = [{name = "Q-Mol"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.30",
    "typer>=0.9",
]
keywords = ["chemistry", "cheminformatics", "rdkit", "smiles", "descriptors", "drug-discovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.urls]
Homepage = "https://qmol.ai"
Docs = "https://qmol.ai/docs"

[project.scripts]
qmol = "qmol_client:_cli_main"

[tool.setuptools]
py-modules = ["qmol_client"]
